--- a/04-Front-End/02-CSS/04-Form/form.html
+++ b/04-Front-End/02-CSS/04-Form/form.html
@@ -5,16 +5,28 @@
   <title>Blog</title>
   <!--Normalize CSS-->
   <link href="normalize.css" rel="stylesheet" type='text/css'>
-
+  <link href="http://fonts.googleapis.com/css?family=Open+Sans:300,400" rel="stylesheet" type="text/css">
   <!--Your CSS-->
   <link href="main.css" rel="stylesheet" type='text/css'>
 
 </head>
 <body>
   <div class="container">
-
-    <!--YOUR FORM HERE-->
-
+    <h1>Sign Up</h1>
+    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.</p>
+    <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate</p>
+    <div class="form-container">
+      <form action="#">
+        <div class="input-form"><label>First name:</label><input type="text" name="firstname"></div>
+        <div class="input-form"><label>Last name:</label><input type="text" name="lastname"></div>
+        <div class="input-form"><label>Password:</label><input type="password" name="pwd"></div>
+        <div class="input-form"><label><input type="radio" name="sex" value="male">Male</label></div>
+        <div class="input-form"><label><input type="radio" name="sex" value="female">Female</label></div>
+        <div class="input-form"><input type="submit" value="Submit"></div>
+        <label><input type="checkbox" checked name="newsletter" value="newsletter">Subscribe to the newsletter</label>
+      </form>
+    </div>
+    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.</p>
   </div>
 </body>
 </html>
