--- a/04-Front-End/05-HTTP-Ajax-2-days/02-AJAX-wagon-race/public/index.html
+++ b/04-Front-End/05-HTTP-Ajax-2-days/02-AJAX-wagon-race/public/index.html
@@ -1,13 +1,58 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8" />
-    <title>JAJAX Wagon Race</title>
-    <link rel="stylesheet" href="/css/normalize.css" />
-    <link rel="stylesheet" href="/css/main.css" />
-  </head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <title>Wagon Game | Ajax Game</title>
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/main.css">
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- Leave those next 4 lines if you care about users using IE8 -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+  </head>
   <body>
-    <script src="/js/game.js"></script>
+    <div id="wrapper">
+      <div id="player1" class="joueurs">
+        <img src="img/player_1.png" alt="Player 1 - Wagon TCHOU TCHOU !">
+      </div>
+      <div id="player2" class="joueurs">
+        <img src="img/player_2.png" alt="Player 2 - Wagon TCHOU TCHOU !">
+      </div>
+      <div id="finish-line"></div>
+    </div>
+
+    <div id="start-game">
+      <a class="btn btn-start btn-lg">Start Game</a>
+    </div>
+
+    <div id="player-names">
+      <form>
+        <input type="text" id="playername1" name="player1" placeholder="Player 1">
+        <p class="versus text-center">VS</p>
+        <input type="text" id="playername2" name="player2" placeholder="Player 2">
+        <input type="submit" class="btn btn-players">
+      </form>
+    </div>
+
+    <div id="countdown">
+      <h2><span>3</span></h2>
+    </div>
+
+    <div id="winner">
+      <h2><span class='who'></span> Wins !</h2>
+      <p><a href="index.html">Play Again</a></p>
+    </div>
+
+      <!-- Including Bootstrap JS (with its jQuery dependency) so that dynamic components work -->
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+      <script src="js/game.js"></script>
   </body>
 </html>
